# moger

./: Dockerfile  README.md  mypy.ini  pyproject.toml
.github/actions/base-setup/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: tests.yml
moger/: main.py  pyproject.toml
moger/moger/: main.py
tests/: test_cli.py
